# fast_face_detector

./: CMakeLists.txt  README.md
detector/: face_detector_integral20x20.xml
matlab/: acfDetectIntegral.m  acfModifyIntegral.m  acfTrainIntegral.m  adaBoostTrain.m  bbNms.m  chnsComputeIntegral.m  chnsPyramidIntegral.m  chnsScalingIntegral.m  compile_mex_files.m  convTri.m  face_detector.m  getPrmDflt.m  gradientMag.m  rgbConvert.m  savetoxml.m  train.asv  train.m
matlab/cpp_files/: acfDetect1.cpp  convConst.cpp  gradientMex.cpp  imPadMex.cpp  imResampleMex.cpp  rgbConvertMex.cpp
matlab/models/big_data/: AcfFaceDetector10x10Log.txt  AcfFaceDetector20x20Detector.mat  AcfFaceDetector20x20Log.txt  AcfFaceDetector5x5Detector.mat  AcfFaceDetector5x5Log.txt
matlab/models/small_data/: AcfFaceDetector10x10Detector.mat  AcfFaceDetector10x10Log.txt  AcfFaceDetector20x20Detector.mat  AcfFaceDetector20x20Log.txt  AcfFaceDetector5x5Detector.mat  AcfFaceDetector5x5Log.txt
src/: classifier.cpp  classifier.h  cutils.cpp  cutils.h  face_detector.cpp  face_detector.h  main.cpp  nms.cpp  nms.h  structs.h  utils.cpp  utils.h
